refactor(Pure): extract AST into a separate module

--- a/purist.cabal
+++ b/purist.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Fun
+      Pure.AST
       Pure.Source.Checks
       Pure.Source.Parser
   other-modules:
