--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ dependencies:
 - mtl >= 2.3.1
 - unordered-containers >= 0.2.20
 - extra >= 1.7.14
+- parsec3-numbers >= 0.1.0
 
 ghc-options:
 - -Wall
