--- a/purist.cabal
+++ b/purist.cabal
@@ -41,6 +41,7 @@ library
     , extra >=1.7.14
     , mtl >=2.3.1
     , parsec >=3.1.16.1
+    , parsec3-numbers >=0.1.0
     , unordered-containers >=0.2.20
   default-language: Haskell2010
 
@@ -58,6 +59,7 @@ executable purist-exe
     , extra >=1.7.14
     , mtl >=2.3.1
     , parsec >=3.1.16.1
+    , parsec3-numbers >=0.1.0
     , purist
     , unordered-containers >=0.2.20
   default-language: Haskell2010
@@ -77,6 +79,7 @@ test-suite purist-test
     , extra >=1.7.14
     , mtl >=2.3.1
     , parsec >=3.1.16.1
+    , parsec3-numbers >=0.1.0
     , purist
     , unordered-containers >=0.2.20
   default-language: Haskell2010
