--- a/purist.cabal
+++ b/purist.cabal
@@ -29,6 +29,7 @@ library
       Pure.AST
       Pure.Source.Checks
       Pure.Source.Parser
+      Pure.Source.Sacred
   other-modules:
       Paths_purist
   autogen-modules:
@@ -42,6 +43,7 @@ library
     , mtl >=2.3.1
     , parsec >=3.1.16.1
     , parsec3-numbers >=0.1.0
+    , text >=2.0.2
     , unordered-containers >=0.2.20
   default-language: Haskell2010
 
@@ -61,6 +63,7 @@ executable purist-exe
     , parsec >=3.1.16.1
     , parsec3-numbers >=0.1.0
     , purist
+    , text >=2.0.2
     , unordered-containers >=0.2.20
   default-language: Haskell2010
 
@@ -81,5 +84,6 @@ test-suite purist-test
     , parsec >=3.1.16.1
     , parsec3-numbers >=0.1.0
     , purist
+    , text >=2.0.2
     , unordered-containers >=0.2.20
   default-language: Haskell2010
