--- a/purist.cabal
+++ b/purist.cabal
@@ -38,8 +38,10 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      QuickCheck >=2.14.3
+    , base >=4.7 && <5
     , extra >=1.7.14
+    , hspec >=2.11.7
     , mtl >=2.3.1
     , parsec >=3.1.16.1
     , parsec3-numbers >=0.1.0
@@ -57,8 +59,10 @@ executable purist-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck >=2.14.3
+    , base >=4.7 && <5
     , extra >=1.7.14
+    , hspec >=2.11.7
     , mtl >=2.3.1
     , parsec >=3.1.16.1
     , parsec3-numbers >=0.1.0
@@ -71,6 +75,7 @@ test-suite purist-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Pure.ASTSpec
       Paths_purist
   autogen-modules:
       Paths_purist
@@ -78,8 +83,10 @@ test-suite purist-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck >=2.14.3
+    , base >=4.7 && <5
     , extra >=1.7.14
+    , hspec >=2.11.7
     , mtl >=2.3.1
     , parsec >=3.1.16.1
     , parsec3-numbers >=0.1.0
