--- a/purist.cabal
+++ b/purist.cabal
@@ -26,10 +26,12 @@ source-repository head
 library
   exposed-modules:
       Fun
-      Pure.AST
+      NodeJS.Transpiler
+      Pure.Module
       Pure.Source.Checks
       Pure.Source.Parser
       Pure.Source.Sacred
+      Result
   other-modules:
       Paths_purist
   autogen-modules:
@@ -75,7 +77,7 @@ test-suite purist-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Pure.ASTSpec
+      Pure.ModuleSpec
       Paths_purist
   autogen-modules:
       Paths_purist
