feat: parse and transpile lists (arrays)

--- a/package.yaml
+++ b/package.yaml
@@ -45,7 +45,7 @@ library:
   source-dirs: src
 
 executables:
-  purist-exe:
+  pure:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
