--- a/purist.cabal
+++ b/purist.cabal
@@ -35,6 +35,7 @@ library
       Pure.Parser
       Pure.Sacred
       Result
+      Strings
   other-modules:
       Paths_purist
   autogen-modules:
@@ -54,7 +55,7 @@ library
     , unordered-containers >=0.2.20
   default-language: Haskell2010
 
-executable purist-exe
+executable pure
   main-is: Main.hs
   other-modules:
       Paths_purist
