--- a/purist.cabal
+++ b/purist.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      CLI
       Convert
       Fun
       Node
@@ -46,6 +47,7 @@ library
   build-depends:
       QuickCheck >=2.14.3
     , base >=4.7 && <5
+    , containers >=0.6.7
     , extra >=1.7.14
     , hspec >=2.11.7
     , mtl >=2.3.1
@@ -67,6 +69,7 @@ executable pure
   build-depends:
       QuickCheck >=2.14.3
     , base >=4.7 && <5
+    , containers >=0.6.7
     , extra >=1.7.14
     , hspec >=2.11.7
     , mtl >=2.3.1
@@ -91,6 +94,7 @@ test-suite purist-test
   build-depends:
       QuickCheck >=2.14.3
     , base >=4.7 && <5
+    , containers >=0.6.7
     , extra >=1.7.14
     , hspec >=2.11.7
     , mtl >=2.3.1
