--- a/package.yaml
+++ b/package.yaml
@@ -46,7 +46,7 @@ library:
   source-dirs: src
 
 executables:
-  pure:
+  purist:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
